Allow to manually set minimum time, distance and accuracy values, closes #18

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -109,4 +109,7 @@
     <string name="write_permission_denied">Należy wyrazić zgodę na zapis do zewnętrznego nośnika</string>
     <string name="using_network">Uzyskano dostęp do lokalizacji z sieci</string>
     <string name="track_server_setup_warning">Uwaga! Po zmianie ustawień serwera synchronizacja bieżącej trasy może się nie powieść.</string>
+    <string name="pref_mintime_other">Minimalny czas w sekundach</string>
+    <string name="pref_mindistance_other">Minimalna odległość w metrach</string>
+    <string name="pref_minaccuracy_other">Minimalna dokładność w metrach</string>
 </resources>
