--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,7 @@
     <!-- hack for api <= 10 and missing "few" plurals, currently used only for Polish locale -->
     <string name="label_positions_behind_few" comment="few positions hack" tools:ignore="PluralsCandidate">%d positions behind</string>
     <string name="track_server_setup_warning">If you change server setup you may not be able to synchronize current track.</string>
+    <string name="pref_mintime_other">Minimum time interval in seconds</string>
+    <string name="pref_mindistance_other">Minimum distance in meters</string>
+    <string name="pref_minaccuracy_other">Minimum accuracy in meters</string>
 </resources>
