added nautical miles as selectable option

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -105,4 +105,5 @@
         <item quantity="many">%d positions derrière</item>
         <item quantity="other">%d positions derrière</item>
     </plurals>
+    <string name="pref_units_nautical">Système nautique</string>
 </resources>
