--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -99,4 +99,13 @@
     <plurals name="label_positions_behind" tools:ignore="UnusedQuantity">
         <item quantity="other">%d 場所残り</item>
     </plurals>
+    <string name="pref_cat_server">サーバ</string>
+    <string name="pref_cat_other">その他の</string>
+    <string name="pref_cat_location">位置追跡</string>
+    <string name="pref_units_nautical">航海ユニット</string>
+    <string name="unit_nmile">nm</string>
+    <string name="track_server_setup_warning">サーバーの設定を変更すると、現在のトラックを同期できなくなる可能性があります。</string>
+    <string name="pref_mintime_other">"秒単位の最小時間間隔 "</string>
+    <string name="pref_mindistance_other">メートル単位の最小距離</string>
+    <string name="pref_minaccuracy_other">メートル単位の最小精度</string>
 </resources>
